ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx

spec:
  ingressClassName: nginx

  rules:
    - host: thai-bug.me
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-service 
              port:
                number: 3000
  tls:
  - hosts:
    - thai-bug.me
    secretName: letsencrypt-nginx
