ingress/my-page.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-page
  annotations:
    cert-manager.io/issuer: my-page-letencrypt

spec:
  ingressClassName: nginx

  rules:
    - host: thai-bug.site
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-page
              port:
                number: 3000
  tls:
  - hosts:
    - thai-bug.site
    secretName: my-page-letencrypt
