ingress/thai-bug.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thai-bug
  annotations:
    cert-manager.io/issuer: thai-bug-letsencrypt

spec:
  ingressClassName: nginx

  rules:
    - host: thai-bug.me
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-service 
              port:
                number: 4000

  tls:
  - hosts:
    - thai-bug.me
    secretName: thai-bug-letsencrypt
